# Vulpes

./: .gitignore  .gitmodules  CMakeLists.txt  MEMORY_UPGRADES.md  README.md  Toolchain-cross-mingw32-linux.cmake  build  build.pl  build_config.yaml  dll_main.cpp  fox.h  makefile  version.h  version.rc  vulpes.cpp  vulpes.hpp
codegen/: changelog.md  codegen_text_helpers.pm  generate.pl
codegen/CodeGen/: Bitfield.pm  Enum.pm  Shared.pm  Signature.pm  Struct.pm  TextHelpers.pm  basic_types.yaml
command/: debug.cpp  debug.hpp  handler.cpp  handler.hpp  server.cpp
docs/: codegen.md  readme.md  readme.me
halo/: paths.hpp  vulpes.cpp
halo/bug_fixes/: cpu_usage.cpp  file_handle_leak.cpp  framerate_dependent_timers.cpp  host_refusal.cpp  shdr_trans_zfighting.cpp
halo/fixes/: animation.cpp  animation.hpp  animation.s  cpu_usage.cpp  cpu_usage.s  file_handle_leak.cpp  file_handle_leak.hpp  framerate_dependent_timers.cpp  framerate_dependent_timers.hpp  host_refusal.cpp  shdr_trans_zfighting.cpp  shdr_trans_zfighting.hpp  string_overflows.cpp
halo/functions/: bitstream.cpp  bitstream.hpp  console.cpp  console.hpp  devmode.cpp  devmode.hpp  message_delta.cpp  message_delta.hpp  message_delta_processor.cpp  message_delta_sender.cpp  message_delta_sender.hpp  messaging.cpp  messaging.hpp  object_unit.cpp  object_unit.hpp
halo/hooks/: console.cpp  console.hpp  console.s  effect.cpp  event.hpp  hooker_code_cave.cpp  hooker_structs.hpp  incoming_packets.cpp  incoming_packets.hpp  incoming_packets.s  king.S  king.cpp  king.hpp  map.S  map.cpp  map.hpp  map.s  object.S  object.cpp  object.hpp  object.s  player.cpp  server.cpp  shared.S  tick.S  tick.cpp  tick.hpp  vehicle.cpp
halo/lua/: lua.cpp  lua.hpp  lua_extension.hpp  lua_helpers.hpp  lua_messaging.cpp  lua_messaging.hpp  lua_open.cpp  lua_open.hpp
halo/memory/: actor.hpp  behavior_definition.hpp  damage_effect.hpp  data_definition.hpp  global.cpp  global.hpp  message_delta.hpp  message_delta_meta.hpp  object.hpp  object_device.cpp  object_device.hpp  object_item.cpp  object_item.hpp  object_unit.cpp  object_unit.hpp  player.hpp  table.cpp  table.hpp  types.cpp  types.hpp
halo/network/: network_globals.cpp  network_globals.hpp  network_id.cpp  network_id.hpp
halo/tweaks/: devmode.cpp  loading_screen.cpp  loading_screen.hpp  tweaks.cpp
halo/upgrades/: map.cpp  map.s  map_crc.cpp
halo_bug_fixes/: animation_bugs.cpp  animation_bugs.hpp  cpu_usage.cpp  cpu_usage.hpp  file_handle_leak.cpp  framerate_dependent_timers.cpp  framerate_dependent_timers.hpp  host_refusal.hpp  shdr_trans_zfighting.cpp  shdr_trans_zfighting.hpp  string_overflows.cpp  string_overflows.hpp  tweaks.hpp
halo_functions/: console.cpp  devmode.cpp  object_unit.cpp  object_unit.hpp
hooker/: code_cave.cpp  function_pointer_safe.hpp  hooker.cpp  hooker.hpp  resource.hpp
hooks/: console.cpp  effect.cpp  event.hpp  hooker.cpp  hooker.hpp  hooker_code_cave.cpp  hooker_event_hook.cpp  hooker_structs.hpp  hud_chat.cpp  incoming_packets.cpp  incoming_packets.hpp  map.cpp  map.hpp  object.cpp  object.hpp  shared_asm.hpp  tick.cpp  tick.hpp
includes/: bit_buffer.hpp  crc32.c  crc32.h  crc32.hpp  file_helpers.hpp  fox.hpp  guicon.cpp  guicon.hpp  string_raw_data_encoder.c  string_raw_data_encoder.hpp
lib/: LuaJIT_Makefile
loader/: dll_main.c  makefile  version.rc
lua/lib/: Makefile
memory/: damage_effect.hpp  object.hpp  object_device.hpp  object_item.hpp  object_unit.cpp  object_unit.hpp  player.hpp  table.cpp  table.hpp  types.hpp
memory/tag/: tag_types.hpp
monolith/: makefile  monolith.c
network/: message_delta_definitions.hpp  network_globals.hpp  network_id.cpp  network_id.hpp  packet_processor.cpp
network/foxnet/: effect.cpp  projectile.cpp
network/message_delta/: bitstream.cpp  bitstream.hpp  definition.cpp  definition.hpp  enums.hpp  message_delta_processor.cpp  message_delta_processor.hpp  message_delta_sender.cpp  message_delta_sender.hpp  string_raw_data_encoder.cpp  string_raw_data_encoder.hpp  unencoded_messages.hpp  vulpes_message.cpp  vulpes_message.hpp
popout_console/: guicon.cpp
retired/: readme.txt
retired/message_delta/: definition.cpp  definition.hpp  vulpes_message_defintion.cpp
upgrades/: devmode.cpp  map_crc.cpp  map_crc.hpp
util/: bit_buffer.cpp  bit_buffer.hpp  crc32.c  crc32.hpp  file_helpers.hpp  fox.hpp  nanoluadict.cpp  nanoluadict.hpp  string_raw_data_encoder.c  string_raw_data_encoder.hpp
vulpes/: event.hpp  paths.hpp  vulpes.cpp
vulpes/command/: debug.cpp  debug.hpp  handler.cpp  handler.hpp  server.cpp  server.hpp
vulpes/debug/: budget.cpp  budget.hpp
vulpes/fixes/: animation.S  animation.cpp  animation.hpp  cpu_usage.S  cpu_usage.cpp  cpu_usage.hpp  file_handle_leak.cpp  framerate_dependent_timers.S  framerate_dependent_timers.cpp  framerate_dependent_timers.hpp  host_refusal.cpp  host_refusal.hpp  shdr_trans_zfighting.cpp  shdr_trans_zfighting.hpp  string_overflows.cpp  string_overflows.hpp
vulpes/functions/: bitstream.cpp  bitstream.hpp  devmode.cpp  devmode.hpp  message_delta.cpp  message_delta.hpp  messaging.cpp  messaging.hpp  object_unit.cpp  object_unit.hpp  table.cpp  table.hpp
vulpes/hooks/: console.S  console.cpp  console.hpp  effect.cpp  incoming_packets.S  incoming_packets.cpp  incoming_packets.hpp  king.S  king.cpp  king.hpp  map.S  map.cpp  map.hpp  object.S  object.cpp  object.hpp  player.cpp  save_load.cpp  save_load.hpp  server.cpp  shared.S  tick.S  tick.cpp  tick.hpp
vulpes/lua/: lua.cpp  lua.hpp  lua_console.cpp  lua_console.hpp  lua_helpers.hpp  lua_messaging.cpp  lua_open.cpp  lua_open.hpp
vulpes/memory/: actor.hpp  behavior_definition.cpp  behavior_definition.hpp  console.cpp  console.hpp  damage_effect.hpp  global.S  global.cpp  global.hpp  message_delta.hpp  message_delta_meta.hpp  signatures.cpp  signatures.hpp  signatures.yaml  table.hpp  types.cpp  types.hpp
vulpes/network/: network_id.cpp  network_id.hpp
vulpes/tweaks/: loading_screen.cpp  loading_screen.hpp  tweaks.cpp  tweaks.hpp
vulpes/upgrades/: gamestate.S  gamestate.cpp  gamestate.hpp  map.S  (+2 more)
(+85 files in other folders)
